--- a/src/contact.css
+++ b/src/contact.css
@@ -138,11 +138,61 @@ textarea{
 
 /*-------------------MEDIA QUERIES-----------------*/
 
-@media screen and (max-width: 375px) {
+
+@media screen and (min-width: 601px) and (max-width: 1024px) {
   .contact-info {
     flex-direction: column;
     width: 100%;
-    padding: 1rem;
+    padding-left: 2rem;
+    gap: 2rem;
+  }
+
+  .message-box {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .name-field,
+  .email-field {
+    display: block;
+    gap: 0.8rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  .message-box input {
+    width: 60%;
+    font-size: 1rem;
+  }
+
+  textarea {
+    width: 60%;
+    font-size: 1rem;
+  }
+
+  #send {
+    width: 40%;
+    font-size: 1rem;
+  }
+
+  .contact-box {
+    width: 90%;
+    padding: 1.5rem;
+  }
+
+  .connect {
+    display: flex;
+    gap: 1.5rem;
+  }
+}
+
+
+
+@media screen and (max-width: 600px) {
+  .contact-info {
+    flex-direction: column;
+    width: 100%;
+    padding-left: 1rem;
     gap: 1.5rem;
   }
 
@@ -153,30 +203,31 @@ textarea{
 
   .name-field,
   .email-field {
-    flex-direction: column;
+    display: block;
     gap: 0.5rem;
+    padding: 0;
+    margin: 0;
   }
 
   .message-box input {
-    width: 100%;
+    width: 86%;
   }
 
   textarea {
-    width: 100%;
+    width: 86%;
   }
 
   #send {
-    width: 100%;
+    width: 86%;
   }
 
   .contact-box {
-    width: 100%;
+    width: 86%;
     padding: 1rem;
   }
 
   .connect {
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: flex;
   }
 }
 
