--- a/src/Cart/cart.css
+++ b/src/Cart/cart.css
@@ -38,6 +38,9 @@
     font-weight: 400;
     color: gray;
     margin-left: 0rem ;
+    text-align: start;
+    padding-left: 0;
+    
 }
 .sizes{
     display: flex;
@@ -113,5 +116,139 @@
     color: white;
     border-radius: 10px;
     transition: all 300ms ease;
+}
+
+
+/*-----------------------MEDIA QUERY--------------------*/
+
+
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  .product-cart {
+    margin-left: 5%;
+    margin-top: 4%;
+    gap: 2rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .product-image {
+    flex: 1;
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .product-image img {
+    width: 80%;
+    height: auto;
+    margin-top: 1.5rem;
+  }
+
+  .product-image h4 {
+    margin-left: 0;
+    font-size: 1rem;
+  }
+
+  .product-details {
+    flex: 1;
+    margin-left: 0;
+    padding-top: 2rem;
+  }
+
+  .sizes {
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    justify-content: start;
+  }
+
+  .size {
+    width: 2.8rem;
+    height: 1.8rem;
+  }
+
+  .quantity {
+    width: 40%;
+    margin-top: 1rem;
+    padding-left: 2rem;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #cart-btn,
+  #buy-btn {
+    width: 85%;
+    font-size: 1rem;
+  }
+}
+
+
+
+
+@media screen and (max-width: 600px) {
+  .product-cart {
+    flex-direction: column;
+    margin-left: 5%;
+    margin-top: 2rem;
+    gap: 1.5rem;
+  }
+
+  .product-image {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .product-image img {
+    width: 90%;
+    height: auto;
+    margin-top: 1rem;
+  }
+
+  .product-image h4 {
+    margin-left: 0;
+    font-size: 0.9rem;
+  }
+
+  .product-details {
+    margin-left: 2rem;
+    padding-top: 0;
+    
+  }
+  .product-details h6{
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+  .sizes {
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin-left: 0;
+  }
+
+  .size {
+    width: 2.5rem;
+    height: 1.8rem;
+  }
+
+  .quantity {
+    width: 50%;
+    justify-content: center;
+    padding-left: 0;
+    margin-left: 0;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #cart-btn,
+   #buy-btn{
+    width: 85%;
+    font-size: 0.95rem;
+  }#buy-btn{
+    margin-bottom: 2rem;
+  }
 }
 
